[trunk] Fixed bug where URL formatting

--- a/test/format.html
+++ b/test/format.html
@@ -10,7 +10,6 @@
 	</head>
 	<body>
 		<div style="display:none;">
-  <div id="test07"><span style="font-family:times new roman;"><strong></strong></span>test</div>
 
 			<input type="hidden" id="test01" name="test01" value="../images/xxx.gif" style="width:100%" />
 			<input type="hidden" id="test02" name="test02" value="./../../images/xxx.gif" style="width:100%" />
@@ -18,6 +17,8 @@
 			<input type="hidden" id="test04" name="test04" value="http://localhost/ke/images/xxx.gif" style="width:100%" />
 			<input type="hidden" id="test05" name="test05" value="http://www.163.com/images/xxx.gif" style="width:100%" />
 			<input type="hidden" id="test06" name="test06" value="http://kindsoft.net/kindeditor/plugins/emoticons/etc_01.gif" style="width:100%" />
+			<input type="hidden" id="test07" name="test07" value="mailto:test@test.com" style="width:100%" />
+			<input type="hidden" id="test08" name="test08" value="ftp://kindsoft.net/xxx.zip" style="width:100%" />
 
 			<div id="test11"><span style="color:#FF0000;"><strong>test</strong></span></div>
 			<div id="test12">123<div style="color:#FF0000;background-color:#00FF00;font-size:18px;font-weight:bold;" class="spanclass">test</div>123</div>
