[trunk] Improved emoticons plugin, Modified demo-02

--- a/examples/demo-02.html
+++ b/examples/demo-02.html
@@ -21,7 +21,7 @@
         items : [
         'fontname', 'fontsize', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline',
         'removeformat', 'justifyleft', 'justifycenter', 'justifyright', 'insertorderedlist',
-        'insertunorderedlist', 'image', 'link']
+        'insertunorderedlist', 'emoticons', 'image', 'link']
     });
   </script>
 </head>
