--- a/examples/demo-16.html
+++ b/examples/demo-16.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>KindEditor</title>
-    <style type="text/css" rel="stylesheet">
-      .editor {
-      margin-top: 5px;
-      margin-bottom: 5px;
-      }
-    </style>
-    <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-    <script type="text/javascript">
-      KE.init({
-          id : 'content1',
-          cssPath : './index.css'
-      });
-      KE.event.add(window, 'load', function() {
-          KE.create('content1');
-          KE.plugin['fullscreen'].click('content1');
-      });
-    </script>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<title>KindEditor</title>
+	<style type="text/css" rel="stylesheet">
+		.editor {
+			margin-top: 5px;
+			margin-bottom: 5px;
+		}
+	</style>
+	<script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
+	<script type="text/javascript">
+		KE.init({
+			id : 'content1',
+			cssPath : './index.css'
+		});
+		KE.event.ready(function() {
+			KE.create('content1');
+			KE.plugin['fullscreen'].click('content1');
+		});
+	</script>
   </head>
   <body>
-    <h3>全屏模式</h3>
-    <div class="editor">
-      <textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
-    </div>
+	<h3>全屏模式</h3>
+	<div class="editor">
+	  <textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
+	</div>
   </body>
 </html>
