--- a/examples/demo-15.html
+++ b/examples/demo-15.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>KindEditor</title>
-    <style type="text/css" rel="stylesheet">
-      .editor {
-      margin-top: 5px;
-      margin-bottom: 5px;
-      }
-    </style>
-    <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-    <script type="text/javascript">
-      KE.init({
-          id : 'content1',
-          cssPath : './index.css',
-          resizeMode : 0
-      });
-      KE.event.add(window, 'load', function() {
-          KE.create('content1');
-          KE.toolbar.disable('content1', []);
-          KE.g['content1'].iframeDoc.designMode = "off";
-          KE.g['content1'].newTextarea.disabled = true;
-      });
-    </script>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<title>KindEditor</title>
+	<style type="text/css" rel="stylesheet">
+		.editor {
+			margin-top: 5px;
+			margin-bottom: 5px;
+		}
+	</style>
+	<script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
+	<script type="text/javascript">
+		KE.show({
+			id : 'content1',
+			cssPath : './index.css',
+			resizeMode : 0,
+			afterCreate : function(id) {
+				KE.create(id);
+				KE.toolbar.disable(id, []);
+				KE.g[id].iframeDoc.designMode = "off";
+				KE.g[id].newTextarea.disabled = true;
+			}
+		});
+	</script>
   </head>
   <body>
-    <h3>只读模式</h3>
-    <div class="editor">
-      <textarea id="content1" name="content" style="width:700px;height:400px;visibility:hidden;">
-        <strong>月下独酌</strong> - 李白<br /><br />
-        花间一壶酒，独酌无相亲。<br /><br />
-        举杯邀明月，对影成三人。<br /><br />
-        月既不解饮，影徒随我身。<br /><br />
-        暂伴月将影，行乐须及春。<br /><br />
-        我歌月徘徊，我舞影零乱。<br /><br />
-        醒时同交欢，醉后各分散。<br /><br />
-        永结无情游，相期邈云汉。<br /><br /></textarea>
-    </div>
+	<h3>只读模式</h3>
+	<div class="editor">
+	  <textarea id="content1" name="content" style="width:700px;height:400px;visibility:hidden;">
+		<strong>月下独酌</strong> - 李白<br /><br />
+		花间一壶酒，独酌无相亲。<br /><br />
+		举杯邀明月，对影成三人。<br /><br />
+		月既不解饮，影徒随我身。<br /><br />
+		暂伴月将影，行乐须及春。<br /><br />
+		我歌月徘徊，我舞影零乱。<br /><br />
+		醒时同交欢，醉后各分散。<br /><br />
+		永结无情游，相期邈云汉。<br /><br /></textarea>
+	</div>
   </body>
 </html>
