--- a/examples/demo-19.html
+++ b/examples/demo-19.html
@@ -32,7 +32,7 @@
   <h3>相对URL</h3>
   <div class="editor">
     <textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;">
-内部连接：<img border="0" src="./../plugins/emoticons/etc_01.gif" /><br />
+内部连接：<img border="0" src="./../plugins/emoticons/0.gif" /><br />
 外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
 内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
 外部超级连接：<a href="http://www.163.com/" target="_blank">点击这里</a><br />
@@ -41,7 +41,7 @@
   <h3>绝对URL</h3>
   <div class="editor">
     <textarea id="content2" name="content" style="width:700px;height:200px;visibility:hidden;">
-内部连接：<img border="0" src="./../plugins/emoticons/etc_01.gif" /><br />
+内部连接：<img border="0" src="./../plugins/emoticons/0.gif" /><br />
 外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
 内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
 外部超级连接：<a href="http://www.163.com/" target="_blank">点击这里</a><br />
@@ -50,7 +50,7 @@
   <h3>绝对URL（包含域名）</h3>
   <div class="editor">
     <textarea id="content3" name="content" style="width:700px;height:200px;visibility:hidden;">
-内部连接：<img border="0" src="./../plugins/emoticons/etc_01.gif" /><br />
+内部连接：<img border="0" src="./../plugins/emoticons/0.gif" /><br />
 外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
 内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
 
