--- a/test/format.html
+++ b/test/format.html
@@ -26,6 +26,7 @@
 			<div id="test14"><img src="./../plugins/emoticons/etc_01.gif" /> test</div>
 			<div id="test15"><img src="http://www.kindsoft.net/images/logo_180_30.gif" /> test</div>
 			<div id="test16"><span style="font-family:times new roman;"><strong>test</strong></span></div>
+			<div id="test17"><svg:a>test</svg:a></div>
 
 		</div>
 		<h1 id="qunit-header">KE.format Test</h1>
