[trunk] Added ver param when load file_manager.html

--- a/plugins/image/image.html
+++ b/plugins/image/image.html
@@ -156,7 +156,7 @@
 					fileManager = new KE.dialog({
 						id : id,
 						cmd : 'file_manager',
-						file : 'file_manager/file_manager.html?id=' + id,
+						file : 'file_manager/file_manager.html?id=' + id + '&ver=' + KE.version,
 						width : 500,
 						height : 400,
 						loadingMode : true,
