--- a/test/general.html
+++ b/test/general.html
@@ -31,7 +31,7 @@
 	<div class="editor">
 	  <textarea id="content1" name="content" style="width:900px;height:250px;visibility:hidden;">
 123456789<br />
-AB<a href="http://wwwwwwwwwwwww">CDEFGHI</a>JK<br />
+AB<a href="http://wwwwwwwwwwwww">CDEFGHIdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</a>JK<br />
 <a href="http://wwwwwwwwwwwww">abcdefgh</a><br />
 <P><STRONG><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">月下独酌</SPAN></STRONG><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px"> - 李白</SPAN></P>
 <P><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">花间一壶酒，独酌无相亲。</SPAN></P>
