--- a/test/format.html
+++ b/test/format.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>KE.format Test</title>
-		<link type="text/css" rel="stylesheet" href="./qunit.css" />
-		<script type="text/javascript" charset="utf-8" src="./qunit.js"></script>
-		<script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-		<script type="text/javascript" charset="utf-8" src="./format.js"></script>
+		<link type="text/css" rel="stylesheet" href="qunit/qunit.css" />
+		<script type="text/javascript" charset="utf-8" src="qunit/qunit.js"></script>
+		<script type="text/javascript" charset="utf-8" src="../kindeditor.js"></script>
+		<script type="text/javascript" charset="utf-8" src="format.js"></script>
 	</head>
 	<body>
 		<div style="display:none;">
