--- a/test/relative.html
+++ b/test/relative.html
@@ -15,7 +15,7 @@
 	position:relative;
 	}
   </style>
-  <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
+  <script type="text/javascript" charset="utf-8" src="../kindeditor.js"></script>
   <script type="text/javascript">
 	KE.show({
 		id : 'content7',
