--- a/plugins/link/link.html
+++ b/plugins/link/link.html
@@ -57,7 +57,7 @@
 				if (linkHtml.match(/kesrc="([^"]+)"/i)) src = RegExp.$1;
 				var target = linkNode.target;
 				hyperLink.value = src;
-				linkType.value = target == '_blank' ? target : '_self';
+				linkType.value = target == '_blank' ? target : '';
 				var range = KE.g[id].keRange;
 				range.selectTextNode(linkNode);
 				KE.g[id].keSel.addRange(range);
@@ -77,7 +77,7 @@
 				<label for="linkType">打开类型</label>
 				<select id="linkType" name="linkType">
 				  <option value="_blank">新窗口</option>
-				  <option value="_self">当前窗口</option>
+				  <option value="">当前窗口</option>
 				</select>
 			</li>
 		</ul>
