[trunk] Fixed issue #84

--- a/examples/demo-05.html
+++ b/examples/demo-05.html
@@ -14,7 +14,7 @@
   </style>
   <!-- 手动添加编辑器的CSS，可放在其它CSS文件后面，防止CSS定义被覆盖。  -->
   <!-- 注：这时必须把loadStyleMode参数设置为false，否则会重复加载同一个CSS文件。 -->
-  <link rel="stylesheet" type="text/css" href="./../skins/oxygen.css" />
+  <link rel="stylesheet" type="text/css" href="./../skins/default.css" />
   <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
   <script type="text/javascript">
 	KE.show({
@@ -24,8 +24,7 @@
 		cssPath : './index.css'
 	});
 	function checkForm() {
-		var data = KE.util.getPureData('content5').replace(/\r\n|\n|\r/, '').replace(/^\s+|\s+$/, '');
-		if (data.length == 0) {
+		if (KE.util.isEmpty('content5')) {
 			alert('请输入内容！');
 			return false;
 		}
