--- a/examples/demo-01.html
+++ b/examples/demo-01.html
@@ -20,11 +20,11 @@
 		afterCreate : function(id) {
 			KE.event.ctrl(document, 13, function() {
 				KE.util.setData(id);
-				window.example.submit();
+				document.forms['example'].submit();
 			});
 			KE.event.ctrl(KE.g[id].iframeDoc, 13, function() {
 				KE.util.setData(id);
-				window.example.submit();
+				document.forms['example'].submit();
 			});
 		}
     });
