--- a/test/general.html
+++ b/test/general.html
@@ -36,6 +36,7 @@
   <form name="example" method="post" action="./../php/demo.php">
 	<div class="editor">
 	  <textarea id="content1" name="content" style="width:900px;height:250px;visibility:hidden;">
+<marquee>aaaaa<strong>aaaaaaaa</strong>aaaa</marquee>
 <p><a href="wwwww"><img align="left" src="http://kindsoft.net/images/logo_180_30.gif" width="180" height="30" alt="" border="0" /></a>KindEditor是一套开源的HTML可视化编辑器，主要用于让用户在网站上获得所见即所得编辑效果，兼容IE、Firefox、Chrome、Safari、Opera等主流浏览器。<br />
 KindEditor使用JavaScript编写，可以无缝的与Java、.NET、PHP、ASP等程序接合。KindEditor非常适合在CMS、商城、论坛、博客、Wiki、电子邮件等互联网应用上使用，2006年7月首次发布2.0以来，KindEditor依靠出色的用户体验和领先的技术不断扩大编辑器市场占有率，目前在国内已经成为最受欢迎的编辑器之一。 </p>
 123456789<br />
@@ -59,8 +60,7 @@ AB<a href="http://wwwwwwwwwwwww">CDEFGHIdddddddddddddddddddddddddddddddddddddddd
 <p>醒时同交欢，醉后各分散。</p>
 <p>永结无情游，相期邈云汉。</p>
 </textarea>
-
-<textarea id="content_html" style="width:900px;height:200px;"></textarea>
+<textarea id="content_html" style="width:900px;height:200px;display:none;"></textarea>
 	</div>
 	<input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
 	<input type="button" name="button" value="取得纯文本" onclick="javascript:alert(KE.util.getPureData('content1'));" />
