--- a/examples/demo-17.html
+++ b/examples/demo-17.html
@@ -9,7 +9,7 @@
       margin-bottom: 5px;
       }
       .ke-icon-hello {
-      background-image: url(./../skins/oxygen/oxygen.gif);
+      background-image: url(./../skins/default/default.gif);
       background-position: 0px -672px;
       width: 16px;
       height: 16px;
