--- a/test/general.html
+++ b/test/general.html
@@ -35,7 +35,7 @@
   <h3>默认模式</h3>
   <form name="example" method="post" action="./../php/demo.php">
 	<div class="editor">
-	  <textarea id="content1" name="content" style="width:900px;height:250px;visibility:hidden;">
+	  <textarea id="content1" name="content" style="width:900px;height:250px;visibility:hidden;"><script>alert(1);</script>
 <p><strong>月下独酌</strong> - 李白</p>
 <p>花间一壶酒，独酌无相亲。</p>
 <p><span style="font-size:32px;">举杯邀明<u>月，对影成</u>三人。</span></p>
