--- a/test/general.html
+++ b/test/general.html
@@ -1,42 +1,33 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>KindEditor</title>
-  <style type="text/css" rel="stylesheet">
-	form {
-	margin: 0;
-	}
-	.editor {
-	margin-top: 5px;
-	margin-bottom: 5px;
-	}
-  </style>
-  <link type="text/css" rel="stylesheet" href="firebug/firebug-lite.css" />
-  <script type="text/javascript" src="firebug/firebug-lite.js"></script>
-<script type="text/javascript">
-	firebug.env.css = 'firebug-lite.css';
-	firebug.env.height = 160;
-</script>
-  <script type="text/javascript" charset="utf-8" src="../kindeditor.js"></script>
-  <script type="text/javascript">
-	KE.show({
-		id : 'content1',
-		allowFileManager : true,
-		afterCreate : function(id) {
-			KE.event.input(KE.g[id].iframeDoc, function() {
-				document.getElementById('content_html').value = KE.util.getData(id);
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor测试</title>
+		<link type="text/css" rel="stylesheet" href="firebug/firebug-lite.css" />
+		<script type="text/javascript" src="firebug/firebug-lite.js"></script>
+		<script type="text/javascript">
+			firebug.env.css = 'firebug-lite.css';
+			firebug.env.height = 160;
+		</script>
+		<script type="text/javascript" charset="utf-8" src="../kindeditor.js"></script>
+		<script type="text/javascript">
+			KE.show({
+				id : 'content1',
+				allowFileManager : true,
+				afterCreate : function(id) {
+					KE.event.input(KE.g[id].iframeDoc, function() {
+						document.getElementById('content_html').value = KE.util.getData(id);
+					});
+				}
 			});
-		}
-	});
-  </script>
-</head>
-<body>
-  <h3>默认模式</h3>
-  <form name="example" method="post" action="./../php/demo.php">
-	<div class="editor">
-	  <textarea></textarea>
-	  <textarea id="content1" name="content" style="width:900px;height:250px;visibility:hidden;"><script>alert(1);</script>
+		</script>
+	</head>
+	<body>
+		<h3>默认模式</h3>
+		<form name="example" method="post" action="./../php/demo.php">
+			<textarea></textarea>
+			<textarea id="content1" name="content" style="width:900px;height:250px;visibility:hidden;">
+<marquee>abcd</marquee>
 <p><strong>月下独酌</strong> - 李白</p>
 <p>花间一壶酒，独酌无相亲。</p>
 <p><span style="font-size:32px;">举杯邀明<u>月，对影成</u>三人。</span></p>
@@ -45,16 +36,11 @@
 <p>我歌月徘徊，我舞影零乱。</p>
 <p>醒时同交欢，醉后各分散。</p>
 <p>永结无情游，相期邈云汉。</p>
-</textarea>
-<textarea id="content_html" style="width:900px;height:100px;"></textarea>
-	</div>
-	<input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
-	<input type="button" name="button" value="取得纯文本" onclick="javascript:alert(KE.util.getPureData('content1'));" />
-	<input type="submit" name="button" value="提交内容" />
-  </form>
-
-  <div id="debug">
-
-  </div>
-</body>
+			</textarea>
+			<textarea id="content_html" style="width:900px;height:100px;"></textarea>
+			<input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
+			<input type="button" name="button" value="取得纯文本" onclick="javascript:alert(KE.util.getPureData('content1'));" />
+			<input type="submit" name="button" value="提交内容" />
+		</form>
+	</body>
 </html>
