--- a/test/innerhtml.html
+++ b/test/innerhtml.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>innerHTML Test</title>
-		<script charset="utf-8" src="../../kindeditor.js"></script>
+		<script charset="utf-8" src="../kindeditor.js"></script>
 		<script type="text/javascript">
 			KE.event.ready(function() {
 				//KE.$('test01').contentEditable = true;
