[trunk] Modified php example

--- a/examples/demo-01.html
+++ b/examples/demo-01.html
@@ -34,7 +34,7 @@
   <h3>默认模式</h3>
   <form name="example" method="post" action="./../php/demo.php">
     <div class="editor">
-      <textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;">
+      <textarea id="content1" name="content1" style="width:700px;height:200px;visibility:hidden;">
 <p>
 <img border="0" alt="" align="left" src="http://kindsoft.net/images/logo_180_30.gif" />
 KindEditor是一套开源的HTML可视化编辑器，主要用于让用户在网站上获得所见即所得编辑效果，兼容IE、Firefox、Chrome、Safari、Opera等主流浏览器。<br />
