--- a/examples/demo-05.html
+++ b/examples/demo-05.html
@@ -37,7 +37,7 @@
   <h3>手动添加Onsubmit事件、手动添加CSS文件</h3>
   <form name="example" method="post" action="./../php/demo.php" onsubmit="javascript:return checkForm();">
 	<div class="editor">
-	  <textarea id="content5" name="content" style="width:700px;height:300px;"></textarea>
+	  <textarea id="content5" name="content1" style="width:700px;height:300px;"></textarea>
 	</div>
 	<input type="submit" name="button" value="提交内容" />
   </form>
