--- a/test/general.html
+++ b/test/general.html
@@ -26,7 +26,7 @@
 		<h3>默认模式</h3>
 		<form name="example" method="post" action="./../php/demo.php">
 			<textarea></textarea>
-			<textarea id="content1" name="content" style="width:900px;height:250px;visibility:hidden;">
+			<textarea id="content1" name="content1" style="width:900px;height:250px;visibility:hidden;">
 <marquee>abcd</marquee>
 <p><strong>月下独酌</strong> - 李白</p>
 <p>花间一壶酒，独酌无相亲。</p>
