--- a/examples/demo-13.html
+++ b/examples/demo-13.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <h3>开启过滤模式</h3>
-  <form name="example" method="post" action="./../php/demo.php">
+  <form name="example" method="post">
     <div class="editor">
       <textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
     </div>
