[trunk] Added toolbar separator

--- a/examples/demo-02.html
+++ b/examples/demo-02.html
@@ -19,9 +19,9 @@
 		resizeMode : 1,
         cssPath : './index.css',
         items : [
-        'fontname', 'fontsize', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline',
-        'removeformat', 'justifyleft', 'justifycenter', 'justifyright', 'insertorderedlist',
-        'insertunorderedlist', 'emoticons', 'image', 'link']
+        'fontname', 'fontsize', '|', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline',
+        'removeformat', '|', 'justifyleft', 'justifycenter', 'justifyright', 'insertorderedlist',
+        'insertunorderedlist', '|', 'emoticons', 'image', 'link']
     });
   </script>
 </head>
