--- a/examples/demo-09.html
+++ b/examples/demo-09.html
@@ -19,13 +19,13 @@
         skinType: 'tinymce',
         cssPath : './index.css',
         items : [
-            'source', 'fullscreen', 'print', 'undo', 'redo', 'cut', 'copy', 'paste',
-            'plainpaste', 'wordpaste', 'justifyleft', 'justifycenter', 'justifyright',
+            'source', '|', 'fullscreen', 'print', 'undo', 'redo', 'cut', 'copy', 'paste',
+            'plainpaste', 'wordpaste', '|', 'justifyleft', 'justifycenter', 'justifyright',
             'justifyfull', 'insertorderedlist', 'insertunorderedlist', 'indent', 'outdent', 'subscript',
-            'superscript', 'emoticons', 'link', 'unlink', '-',
-            'title', 'fontname', 'fontsize', 'textcolor', 'bgcolor', 'bold',
-            'italic', 'underline', 'strikethrough', 'removeformat', 'selectall', 'image',
-            'flash', 'media', 'table', 'hr', 'about'
+            'superscript', '|', 'emoticons', 'link', 'unlink', '-',
+            'title', 'fontname', 'fontsize', '|', 'textcolor', 'bgcolor', 'bold',
+            'italic', 'underline', 'strikethrough', 'removeformat', 'selectall', '|', 'image',
+            'flash', 'media', 'table', 'hr', '|', 'about'
         ]
     });
   </script>
