--- a/test/general.html
+++ b/test/general.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>KindEditor测试</title>
-		<link type="text/css" rel="stylesheet" href="firebug/firebug-lite.css" />
-		<script type="text/javascript" src="firebug/firebug-lite.js"></script>
-		<script type="text/javascript">
+		<link rel="stylesheet" href="firebug/firebug-lite.css" />
+		<script src="firebug/firebug-lite.js"></script>
+		<script>
 			firebug.env.css = 'firebug-lite.css';
 			firebug.env.height = 160;
 		</script>
-		<script type="text/javascript" charset="utf-8" src="../kindeditor.js"></script>
-		<script type="text/javascript">
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
 			KE.show({
 				id : 'content1',
 				allowFileManager : true,
@@ -25,9 +25,7 @@
 	<body>
 		<h3>默认模式</h3>
 		<form name="example" method="post" action="./../php/demo.php">
-			<textarea id="content1" name="content1" style="width:900px;height:250px;visibility:hidden;">
-<p>dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
-			</textarea>
+			<textarea id="content1" name="content1" style="width:900px;height:250px;visibility:hidden;"></textarea>
 			<textarea id="content_html" style="width:900px;height:100px;"></textarea>
 			<br />
 			<input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
