[trunk] Fixed issue #102

--- a/test/general.html
+++ b/test/general.html
@@ -25,7 +25,8 @@
 	<body>
 		<h3>默认模式</h3>
 		<form name="example" method="post" action="./../php/demo.php">
-			<textarea id="content1" name="content1" style="width:900px;height:250px;visibility:hidden;"></textarea>
+			<textarea id="test" style="width:900px;height:100px;"></textarea>
+			<textarea id="content1" name="content1" style="width:900px;height:250px;visibility:hidden;">aaaaa</textarea>
 			<textarea id="content_html" style="width:900px;height:100px;"></textarea>
 			<br />
 			<input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
