[trunk] Fixed issue #103

--- a/test/general.html
+++ b/test/general.html
@@ -26,7 +26,11 @@
 		<h3>默认模式</h3>
 		<form name="example" method="post" action="./../php/demo.php">
 			<textarea id="test" style="width:900px;height:100px;"></textarea>
-			<textarea id="content1" name="content1" style="width:900px;height:250px;visibility:hidden;">aaaaa</textarea>
+			<textarea id="content1" name="content1" style="width:900px;height:250px;visibility:hidden;">
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww2">啊啊</a>啊<a href="http://wwwwwwwwwwww" target="_blank"><img height="24" alt="" src="../plugins/emoticons/0.gif" width="24" border="0" /></a><br />
+
+</textarea>
 			<textarea id="content_html" style="width:900px;height:100px;"></textarea>
 			<br />
 			<input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
