[trunk] Fixed bug

--- a/test/general.html
+++ b/test/general.html
@@ -24,6 +24,7 @@
 	</head>
 	<body>
 		<h3>默认模式</h3>
+		<a href="#">超级链接</a>
 		<form name="example" method="post" action="./../php/demo.php">
 			<textarea id="test" style="width:900px;height:100px;"></textarea>
 			<textarea id="content1" name="content1" style="width:900px;height:250px;visibility:hidden;">
