--- a/test/general.html
+++ b/test/general.html
@@ -23,14 +23,24 @@
 		</script>
 	</head>
 	<body>
-		<h3>默认模式</h3>
 		<a href="#">超级链接</a>
 		<form name="example" method="post" action="./../php/demo.php">
-			<textarea id="test" style="width:900px;height:100px;"></textarea>
+			<textarea id="test" style="width:900px;height:50px;"></textarea>
 			<textarea id="content1" name="content1" style="width:900px;height:250px;visibility:hidden;">
 啊<a href="wwww1">啊啊</a>啊<br />
 啊<a href="wwww2">啊啊</a>啊<a href="http://wwwwwwwwwwww" target="_blank"><img height="24" alt="" src="../plugins/emoticons/0.gif" width="24" border="0" /></a><br />
-
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww1">啊啊</a>啊<br />
+啊<a href="wwww1">啊啊</a>啊<br />
 </textarea>
 			<textarea id="content_html" style="width:900px;height:100px;"></textarea>
 			<br />
