[trunk] Fixed issue #105

--- a/test/general.html
+++ b/test/general.html
@@ -29,6 +29,7 @@
 			<textarea id="content1" name="content1" style="width:900px;height:250px;visibility:hidden;">
 aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 啊<a href="wwww1">啊啊</a>啊<br />
+<embed src="http://" type="application/x-shockwave-flash" width="550" height="400" quality="high" />
 啊<a href="wwww2">啊啊</a>啊<a href="http://wwwwwwwwwwww" target="_blank"><img height="24" alt="" src="../plugins/emoticons/0.gif" width="24" border="0" /></a><br />
 啊<a href="wwww1">啊啊</a>啊<br />
 啊<a href="wwww1">啊啊</a>啊<br />
